More fixes to extent map word-wrapping at various resolutions.

--- a/assets/99_app.css
+++ b/assets/99_app.css
@@ -145,13 +145,13 @@ label.label:not(:last-child) {
 	}
 }
 
-@media (min-width: 768px) and (max-width: 899px) {
+@media (min-width: 768px) and (max-width: 1119px) {
 	.extent-wrapper.desktop {
 		height: 480px;
 	}
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1120px) {
 	.extent-wrapper.desktop {
 		height: 400px;
 	}
